# forlenza-scada

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  forlenza-industrial.afphoto  installer.wxs
.github/workflows/: build-app.yml  build-deploy.yml  deploy-website.yml
src/: main.rs  scada_ui.html
web/: contact.html  index.html  products.html  support.html
web/styles/: main.css
